<?xml version="1.0"?>
<package format="2">
  <name>ntripbrowser_ros</name>
  <version>0.0.0</version>
  <description>The ntripbrowser_ros package</description>

  <maintainer email="maxime.cognie@meropy.com">cognie</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
